Wed Mar 17 10:26:44 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* gnulib: Import localcharset module.
	* src/encodings.c (struct charset_entry): Rename locale_charset to
	  charset_from_locale.  Update all users.
	  (struct less_charset_entry): Likewise.
	  (get_locale_charset): Use locale_charset function from Gnulib,
	  rather than dealing with nl_langinfo and the fallback ourselves.
	  (get_default_device): Rename locale_charset parameter to
	  charset_from_locale.
	  (get_less_charset): Likewise.
	  (get_jless_charset): Likewise.
	* src/tests/Makefile.am (TESTS_ENVIRONMENT): Add
	  @LOCALCHARSET_TESTS_ENVIRONMENT@.

Sat Mar 13 22:15:54 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* man/check-man: Ignore "table wider than line width" warnings for
	  Dutch too.

Sat Mar 13 21:33:48 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Upgrade to Gnulib 20100308.

Thu Mar 11 01:26:56 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Add AM_MAINTAINER_MODE.  In the modern world,
	  timestamps are often just too fragile for those make targets to
	  work well; use ./autogen.sh instead.

Tue Mar  2 19:11:44 GMT 2010  Darren Salt  <linux@youmustbejoking.demon.co.uk>

	Add support for XZ-compressed manual pages (Debian bug #572233).

	* configure.ac: Check for xz.
	* include/comp_src.h.in (comp_list): Add xz.
	* include/manconfig.h.in: Define UNXZ.
	* NEWS: Document this.

Tue Mar  2 10:04:54 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Fix assertion failure on 'man -l' with an uncompressed page and
	prefixed input (no-hyphenation, no-justification, or a non-English
	page).

	* lib/pipeline.c (command_new_passthrough): New function.
	* lib/pipeline.h (command_new_passthrough): Add prototype.
	* src/man.c (display): Allow zero-command decompression pipelines
	  with prefix sequences.  In that case, append a passthrough command
	  to the prefix sequence, and append the prefix sequence to the