@@ -796,7 +796,8 @@ is installed with the setuid bit set.
 By default,
 .B %man%
 will try to interpret pairs of manual page names given on the command line
-as equivalent to a single manual page name containing a hyphen.
+as equivalent to a single manual page name containing a hyphen or an
+underscore.
 This supports the common pattern of programs that implement a number of
 subcommands, allowing them to provide manual pages for each that can be
 accessed using similar syntax as would be used to invoke the subcommands
